--- a/src/app/site/visit1/visit1.component.scss
+++ b/src/app/site/visit1/visit1.component.scss
@@ -23,3 +23,12 @@
 .mat-list-item-content {
   padding: 0px;
 }
+
+.mat-expansion-panel-header {
+  padding: 1px !important;
+  font-size: 12px !important;
+}
+.mat-expansion-panel-body {
+  padding: 0px !important;
+}
+
