--- a/src/app/site/patient-list/patient-list.component.html
+++ b/src/app/site/patient-list/patient-list.component.html
@@ -37,7 +37,9 @@
                 <ng-container matColumnDef="patid">
                   <th mat-header-cell *matHeaderCellDef>Patient ID</th>
                   <td mat-cell *matCellDef="let patient">
+                    <a routerLink="/site/visits/{{ patient._id }}">
                     {{ getRefNumber(patient.pat_id, patient.prefix) }}
+                    </a>
                   </td>
                 </ng-container>
                 <ng-container matColumnDef="initials">
@@ -70,14 +72,18 @@
                     <!-- <a mat-raised-button type="button" class="btn btn-info ">
                               <i class="material-icons">person</i>
                             </a> -->
-                    <a
+                    <button routerLink="/site/visits/{{ patient._id }}"
+                    matTooltip="Show Visits"
+                    mat-icon-button color="primary">
+                      <mat-icon>pets</mat-icon>
+                    </button>
+                    <button
                       routerLink="/site/patient/{{ patient._id }}"
-                      mat-raised-button
-                      type="button"
-                      class="btn btn-success "
+                      matTooltip="Edit"
+                      mat-icon-button color="warn"
                     >
-                      <i class="material-icons">edit</i>
-                    </a>
+                      <mat-icon>edit</mat-icon>
+                  </button>
                   </td>
                 </ng-container>
                 <tr mat-header-row *matHeaderRowDef="displayedColumn"></tr>
