--- a/src/app/site/site-dashboard/site-dashboard.component.html
+++ b/src/app/site/site-dashboard/site-dashboard.component.html
@@ -12,11 +12,11 @@
       <div class="row" *ngIf="studyName">
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="card card-stats">
-            <div class="card-header card-header-warning card-header-icon">
+            <div class="card-header card-header-success card-header-icon">
               <div class="card-icon">
                 <i class="material-icons">assignment_ind</i>
               </div>
-              <p class="card-category">Enrolled Patients</p>
+              <p class="card-category">Enrolled Patients </p>
               <h3 class="card-title">{{patientCount}}</h3>
             </div>
             <div class="card-body">
@@ -36,16 +36,16 @@
                     <i class="material-icons">add_box</i>Add</a>
                 </div>
               </div>
-                
+
               <div class="table-responsive">
                 <table mat-table [dataSource]="dataSource" class="table ">
                   <ng-container matColumnDef="patid">
                     <th mat-header-cell *matHeaderCellDef>Patient ID</th>
                     <td mat-cell *matCellDef="let patient" class="text-left"> <mat-icon>person</mat-icon>
-                      <span routerLink="/site/patient/{{ patient._id }}">
+                      <span routerLink="/site/visits/{{ patient._id }}">
                           {{ getRefNumber(patient.pat_id, patient.prefix) }}
                       </span>
-                      
+
                     </td>
                   </ng-container>
                   <ng-container matColumnDef="initials">
@@ -57,19 +57,14 @@
                   <tr mat-header-row *matHeaderRowDef="displayedColumn"></tr>
                   <tr mat-row *matRowDef="let row; columns: displayedColumn"></tr>
                 </table>
-  
+
                 <mat-paginator
-                  [pageSizeOptions]="[5, 10, 20]"
+                  [pageSizeOptions]="[5]"
                   showFirstLastButtons
                 ></mat-paginator>
               </div>
             </div>
-            <div class="card-footer">
-              <div class="stats">
-                <i class="material-icons text-danger">pageview</i>
-                <a routerLink='/site/patients' routerLinkActive="router-link-active" >View Patients</a>
-              </div>
-            </div>
+
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6">
@@ -78,32 +73,39 @@
               <div class="card-icon">
                 <i class="material-icons">lock</i>
               </div>
-              <p class="card-category">eCRF Locked</p>
-              <h3 class="card-title">0</h3>
+              <p class="card-category">eCRF Status</p>
+              <!-- <h3 class="card-title">0</h3> -->
             </div>
-            
+            <div class="card-body">
+              <table class="table table-striped">
+                <tr><td class="text-left">Pending</td><td>0</td></tr>
+                <tr><td class="text-left">Complete</td><td>0</td></tr>
+                <tr><td class="text-left">Verified</td><td>0</td></tr>
+                <tr><td class="text-left">Locked</td><td>0</td></tr>
+              </table>
+            </div>
+
             <div class="card-footer">
               <div class="stats">
-                <i class="material-icons">local_offer</i> Tracked from Google Analytics
+                <i class="material-icons">local_offer</i>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 col-sm-6">
+        <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="card card-stats">
-            <div class="card-header card-header-success card-header-icon">
+            <div class="card-header card-header-warning  card-header-icon">
               <div class="card-icon">
                 <i class="material-icons">notification_important</i>
               </div>
-              <p class="card-category">Open Queries</p>
-              <h3 class="card-title">0</h3>
+              <p class="card-category">Queries Status</p>
+              <!-- <h3 class="card-title">0</h3> -->
             </div>
             <div class="card-body">
               <table class="table table-striped">
-                <tr><td class="text-left">Non-conformant Data</td><td>{{nonConformant}}</td></tr>
                 <tr><td class="text-left">Open Queries</td><td>{{openQuery}}</td></tr>
-                <tr><td class="text-left">Sticky Notes</td><td>{{stickyNotes}}</td></tr>
-                <tr><td class="text-left">Overdue Data</td><td>{{overDue}}</td></tr>
+                <tr><td class="text-left">Responded Queries</td><td>{{overDue}}</td></tr>
+                <tr><td class="text-left">Closed Queries</td><td>{{overDue}}</td></tr>
               </table>
             </div>
             <div class="card-footer">
