--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -1,4 +1,4 @@
-<mat-form-field class="demo-full-width" [formGroup]="group" >
+<mat-form-field class="demo-full-width" [formGroup]="group" [ngClass]="{'hidden': isShown()}">
   <input matInput [formControlName]="field.name" [placeholder]="field.label" [type]="field.inputType">
 
   <ng-container *ngFor="let validation of field.validations;" ngProjectAs="mat-error">
