--- a/src/app/site/medical-history/medical-history.component.html
+++ b/src/app/site/medical-history/medical-history.component.html
@@ -55,7 +55,7 @@
                       </button></td>
                     <td>{{gm.indication}}</td>
                     <td>{{gm.diagnosisDate | date}}</td>
-                    <td>{{gm.isongoing === '1'? 'Ongoing' :  gm.endDate  | date}}</td>
+                    <td>{{gm.isongoing? 'Ongoing' :  gm.endDate  | date}}</td>
                     <td>{{gm.treatment}}</td>
                     <td>{{gm.description}}</td>
                   </tr>
@@ -144,7 +144,7 @@
                     <td>{{op.treatment}}</td>
                     <td>{{op.description}}</td>
                     <td>{{op.startDate | date}}</td>
-                    <td>{{op.isongoing === '1'? 'Ongoing':  op.endDate | date}}</td>
+                    <td>{{op.isongoing? 'Ongoing':  op.endDate | date}}</td>
 
                   </tr>
                   <button mat-icon-button color="primary" *ngIf="!addOpMedHistory" matTooltip="Add new row" (click)="addOpMedHistory = !addOpMedHistory;" ><mat-icon>add</mat-icon>Add new record</button>
@@ -236,7 +236,7 @@
                 </thead>
                 <tbody>
                   <tr *ngFor="let med of medicationHistory; let i = index;">
-                    <td>
+                    <td> {{i+1}}
                         <button mat-icon-button color="warn" matTooltip="Remove the row" (click)="removeMedRow(i)">
                             <mat-icon>remove</mat-icon>
                           </button>
@@ -247,7 +247,7 @@
                     <td>{{med.route}}</td>
                     <td>{{med.dose}}</td>
                     <td>{{med.startDate | date}}</td>
-                    <td>{{med.isongoing === '1'? 'Ongoing' :  med.endDate | date}}</td>
+                    <td>{{med.isongoing? 'Ongoing' :  med.endDate | date}}</td>
                   </tr>
                   <button mat-icon-button color="primary" *ngIf="!addMedHistory" matTooltip="Add new row" (click)="addMedHistory = !addMedHistory;" ><mat-icon>add</mat-icon></button>
                   <tr *ngIf="addMedHistory">
@@ -336,6 +336,7 @@
               <mat-action-row>
                   <button mat-button color="warn" (click)="prevStep()">Previous</button>
                   <button mat-button color="primary" (click)="saveForm()">Save</button>
+                  <button mat-button color="default" routerLink='/site/visits/{{patID}}' >Cancel</button>
                 </mat-action-row>
             </mat-expansion-panel>
           </mat-accordion>
